tests/parser-test-files/bad-files/parse-attribute.7.error
error: Unknown repr attribute
  --> test:4:6
   |
 4 |  (repr :hello)
   |        ^^^^^^ expected one of :lisp, :transparent, :enum, or :native
